--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,24 @@ body {
     margin: 0;
 }
 
+.container {
+    width: 90%;
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+.map {
+    height: 400px;
+    border: 1px solid #eee;
+    border-radius: 2px;
+    margin: 40px 0;
+}
+
+form {
+    width: 600px;
+    margin: 0 auto;
+}
+
 fieldset {
     border-color: #ddd;
     border-radius: 4px;
