--- a/styles/style.css
+++ b/styles/style.css
@@ -25,12 +25,14 @@ body {
 
 .container {
     width: 90%;
-    max-width: 900px;
+    max-width: 1000px;
     margin: 0 auto;
+    height: 100%;
 }
 
 .map {
-    height: 400px;
+    height: 60%;
+    min-height: 400px;
     border: 1px solid #eee;
     border-radius: 2px;
     margin: 40px 0;
